--- a/x86model/fuzz/instr_fuzz/README
+++ b/x86model/fuzz/instr_fuzz/README
@@ -1,4 +1,6 @@
 To make the syntax fuzzer, just do:
 
-make syntaxfuzzer.native
+(1) make extraction
+(2) make syntaxfuzzer.native
+
 Then you can run it (i.e ./syntaxfuzzer.native)
