Added more extensive command-line argument support for syntax fuzzer, added floating-point instructions to the fuzzer framework, fixed a few floating-point bugs.

--- a/x86model/fuzz/instr_fuzz/README
+++ b/x86model/fuzz/instr_fuzz/README
@@ -3,4 +3,13 @@ To make the syntax fuzzer, just do:
 (1) make extraction
 (2) make syntaxfuzzer.native
 
-Then you can run it (i.e ./syntaxfuzzer.native)
+Then you can run it. Here's how to run:
+
+./syntaxfuzzer.native [type string] [lb int] [ub int] [n int]
+
+  -type : specify instruction set to fuzz (gp or fp)
+  -lb : set the lowerbound
+  -ub : set the upperbound
+  -n : set number of runs
+
+example: ./syntaxfuzzer.native -type fp -lb 0 -ub 30 -n 10000
