--- a/x86model/gdb_smtrace/README
+++ b/x86model/gdb_smtrace/README
@@ -1,6 +1,8 @@
-Uses gdb macros to step through a test program named main.c and dumps out state of all registers at every step. Macros (a.k.a commands) are stored in gdb_init and are copied over to .gdbinit at compile-time.
+Uses gdb macros to step through a test program named main.c and dumps out state of all registers and memory operands at every step. Macros (a.k.a commands) are stored in gdb_init and are copied over to .gdbinit at compile-time.
 
 To run: make smtrace
 -Results are dumped to gdb.txt
 -Static assembler instructions are objdumped to instrs.txt 
+
+Note: If gdb.txt or instrs.txt doesn't exist, just run touch gdb.txt or touch instrs.txt then run make smtrace
 
