- Bring the RockSalt proof in VerifierCorrectness.v   up-to-date w.r.t to changes in the Model directory. - Some updates of README and INSTALL files - Added .gitignore

--- a/README
+++ b/README
@@ -7,7 +7,7 @@ x86model/
 	A Coq formalization of a Pentium
 
 x86model/Model
-	The CPU model
+	The CPU model, including the flocq-2.1.0 library
 
 x86model/RockSalt
 	A formally verified SFI checker based on our model of x86
