--- a/INSTALL
+++ b/INSTALL
@@ -1,17 +1,18 @@
 
-How to build the CPU models?
+* How to build the CPU models?
 
-You will need Coq 8.3 pl2 (known to work for us as of Nov 6, 2011).
-For MIPS, go to MIPSmodel and type make.
-For x86, go to x86model and type make.
+You will need Coq 8.4pl3 (known to work for us as of Dec 12th, 2014).
+
+- For x86, go to x86model and type make.
+- For MIPS, go to MIPSmodel and type make.
  
-How to build the validation tools?
+* How to build the validation tools?
 
-First, build the x86 CPU model. Then, you will need OCaml 3.12, and pin
-(http://www.pintool.org/). Please go to the x86model/semantics_trace directory
-and for further instructions. 
+First, build the x86 CPU model. Then, you will need OCaml 3.12 (or a more
+recent verison), and pin (http://www.pintool.org/). Please go to the
+x86model/semantics_trace directory and for further instructions.
 
-How to build the RockSalt C driver?
+* How to build the RockSalt C driver?
 
 You will need to install the developer version of native client first. Then,
 replace the native_client/src/trustaed/validator_x86/ncval.c file with ours,
