Updated the readme file.

--- a/README
+++ b/README
@@ -1,23 +1,29 @@
-
-Last checked in Coq 8.4pl6:
+The Model and RockSalt directories last checked in Coq 8.5pl1
 
 MIPSmodel/
 	A Coq formalization of a MIPS processor
+        (sorry, but this directory hasn't been migrated to Coq 8.5)
 
 x86model/
 	A Coq formalization of a Pentium
 
+
 x86model/Model
-	The CPU model, including the flocq-2.1.0 library
+	The CPU model, including the flocq-2.5.1 library
+        (up to date to Coq 8.5)
 
 x86model/RockSalt
 	A formally verified SFI checker based on our model of x86
+        (mostly up to date to Coq 8.5, except for NaclJmp and DFACorrectness)
 
 x86model/fuzz
 	A fuzz tester for the x86 model
+        (sorry, but hasn't tested this for a while)
 
 x86model/cdriver
 	A C implementation of an SFI checker using our certified DFAs
+        (sorry, but hasn't tested this for a while)
 
 x86model/semantics_trace
 	Simulation and instrumentation of x86 binaries
+        (sorry, but hasn't tested this for a while)
